# shinyverse

./: .copier-answers.yml  .coverage-tmp.html  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TODO  changelog.html  code_of_conduct.html  contributing.html  credits.html  duties.py  index.html  license.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
config/: ruff.toml
config/vscode/: settings.json
scripts/: gen_credits.py
search/: search_index.json
src/shinyverse/: __init__.py  __main__.py  cli.py  debug.py
tests/: __init__.py  test_cli.py
