[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "shinyverse"
description = "A batteries included opinionated approach to building shiny apps in python"
authors = [
    {name = "James Wade", email = "github@jameshwade.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 1 - Shaping",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "polars>=0.20.6",
]

[project.urls]
Homepage = "https://jameshwade.github.io/shinyverse"
Documentation = "https://jameshwade.github.io/shinyverse"
Changelog = "https://jameshwade.github.io/shinyverse/changelog"
Repository = "https://github.com/jameshwade/shinyverse"
Issues = "https://github.com/jameshwade/shinyverse/issues"
Discussions = "https://github.com/jameshwade/shinyverse/discussions"
Funding = "https://github.com/sponsors/jameshwade"

[project.scripts]
shinyverse = "shinyverse.cli:main"

[tool.pdm]
version = {source = "scm"}
plugins = [
    "pdm-multirun",
]
distribution = true

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"

