[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "shinyverse"
description = "A batteries included opinionated approach to building shiny apps in python"
authors = [
    {name = "James Wade", email = "github@jameshwade.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 1 - Shaping",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "polars>=0.20.6",
    "shiny>=0.7.0",
    "shinyswatch>=0.4.2",
    "htmltools>=0.5.1",
    "shinywidgets>=0.3.0",
    "great-tables>=0.2.0",
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.urls]
Homepage = "https://jameshwade.github.io/shinyverse"
Documentation = "https://jameshwade.github.io/shinyverse"
Changelog = "https://jameshwade.github.io/shinyverse/changelog"
Repository = "https://github.com/jameshwade/shinyverse"
Issues = "https://github.com/jameshwade/shinyverse/issues"
Discussions = "https://github.com/jameshwade/shinyverse/discussions"

[project.scripts]
shinyverse = "shinyverse.cli:main"

[tool.pdm]
version = {source = "scm"}
plugins = [
    "pdm-multirun",
]
distribution = true

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"

[tool.pdm.dev-dependencies]
dev = [
    "mkdocs-material>=9.5.6",
    "mkdocs-callouts>=1.10.0",
    "markdown-exec>=1.8.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-coverage>=1.0.0",
    "mkdocstrings>=0.24.0",
    "mkdocs-git-committers-plugin>=0.2.3",
    "mkdocs-minify-plugin>=0.8.0",
    "bandit>=1.7.7",
]
